# AI-Interview-agentic-system

./: .gitignore  README.md  build_shares.py  github_setup.py  organize_agents.py  supabase_schema.md
Organized-Agents/: README.md  __init__.py
Organized-Agents/1_Pre_Interview_Screening/: jd_agent.py  match_agent.py
Organized-Agents/2_Evaluation_and_Reporting/: judge_agent.py  report_agent.py
Organized-Agents/4_Full_Automated_Interviewer/: interview_agent.py
Scheduling-Agent/: .env.example  CONTRIBUTING.md  LICENSE  README.md  agent_core.py  architecture.mmd  chat.html  chat_server.py  cli.py  example.py  playground.html  pyproject.toml  recruiter-dashboard.html  requirements.txt  scheduling_agent.py
agent-playground/: index.html
agent-playground-2/: index.html
agents/: gemini_core.py  memory_agent.py  resume_agent.py
backend/: .env.example  database.py  main.py  middleware.py  models.py  requirements.txt  run_tests.py  schemas.py  test_resume_parser.py
backend/routers/: interview_router.py  jd_router.py  match_router.py  resume_router.py  roadmap_router.py  scheduling_router.py  workflow_router.py  (+1 more)
docs/: ai-agentic-flow.md  architecture.md  audio-interview-flow.md  backend-api.md  chapter1.md  chapter2.md  chapter3.md  chapter4.md  chapter5.md  chapter6.md  database.md  databse.md  development standards.md  enterprise.md  full-agentic-workflow.md  interview-agent.md  multiagent.md  product-roadmap.md  ui.md  version-evolution.md  workflow.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
github/: LICENSE
(+42 files in other folders)
