[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scheduling-agent"
version = "0.1.0"
description = "A pluggable interview scheduling agent with mock Zoom and email output"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "google-generativeai>=0.4.0",
  "requests>=2.31.0",
]

[project.scripts]
scheduling-agent = "cli:main"

[tool.setuptools]
py-modules = ["agent_core", "chat_server", "cli", "scheduling_agent", "example"]